# uart_timestamp_rapi4_rust_baremetal

./: Cargo.toml  linker.ld
.cargo/: config.toml
src/: boot.rs  bsp.rs  main.rs  panic_wait.rs  print.rs  time.rs
src/_arch/aarch64/: time.rs
src/_arch/aarch64/cpu/: boot.rs  boot.s
src/bitbang/: uart.rs
src/bsp/: device_driver.rs  raspberrypi.rs
src/bsp/device_driver/bcm/: bcm2xxx_gpio.rs  bcm2xxx_pl011_uart.rs
src/bsp/raspberrypi/: driver.rs  memory.rs
src/gpio/: pin.rs  reg.rs
