[package]
name = "mingo"
version = "0.7.0"
authors = ["Andre Richter <andre.o.richter@gmail.com>"]
edition = "2021"

[profile.release]
lto = true

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
bench = false

[dependencies]
tock-registers = { version = "0.8.x", features = ["register_types"]}
aarch64-cpu = { version = "9.x.x" }
